# modify_jupter_cell_tags

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  _config.yml  _toc.yml  environment.yml  parse_yaml.py  pyproject.toml  test_notebook.ipynb
.github/workflows/: build_docs.yaml  deploy.yaml
